comment out 2 more containers - 4 instead of 6 - and fixed header alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@ subtitle {
   text-align: end;
   /* font-family: 'Poppins', sans-serif; */
 } 
-footer {
+header, footer {
   text-align: center;
   color: black;
   display: block;
